[gd_scene load_steps=2 format=3 uid="uid://cjhobubac06f"]

[ext_resource type="Script" uid="uid://defkyyae2l6r6" path="res://scripts/weapon_manager.gd" id="1_wl771"]

[node name="WeaponManager" type="Node3D"]
script = ExtResource("1_wl771")

[node name="CooldownTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -100)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="WeaponModel" type="Node3D" parent="."]

[node name="MuzzleFlash" type="CPUParticles3D" parent="."]
